Correções: leitura CSV com cabeçalho, caminho fixo e melhorias gerais