@@ -2,6 +2,7 @@ package com.exemplo.ecohabitos.io;
 
 import com.exemplo.ecohabitos.dominio.*;
 import com.exemplo.ecohabitos.excecoes.HabitoInvalidoException;
+
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.IOException;
@@ -11,7 +12,7 @@ import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-
+import java.util.Locale;
 
 public class ArmazenamentoCsv {
 
@@ -19,8 +20,9 @@ public class ArmazenamentoCsv {
         try (BufferedWriter bw = Files.newBufferedWriter(caminho, StandardCharsets.UTF_8)) {
             for (Habito h : habitos) {
                 String tipo = h.getClass().getSimpleName();
-                String linha = "%s;%s;%s;%s;%.2f".formatted(
-                        tipo, h.getId(), h.getNome(), h.getData(), h.getQuantidade());
+                String quantidadeStr = String.format(Locale.US, "%.2f", h.getQuantidade());
+                String linha = "%s;%s;%s;%s;%s".formatted(
+                        tipo, h.getId(), h.getNome(), h.getData(), quantidadeStr);
                 bw.write(linha);
                 bw.newLine();
             }
@@ -33,23 +35,41 @@ public class ArmazenamentoCsv {
 
         try (BufferedReader br = Files.newBufferedReader(caminho, StandardCharsets.UTF_8)) {
             String linha;
+            boolean primeira = true;
             while ((linha = br.readLine()) != null) {
+                linha = linha.trim();
+                if (linha.isEmpty() || linha.startsWith("#")) continue;
+
+                if (primeira) {
+                    String lcase = linha.toLowerCase();
+                    if (lcase.startsWith("tipo;") && lcase.contains(";data;")) {
+                        primeira = false;
+                        continue;
+                    }
+                }
+                primeira = false;
+
                 String[] partes = linha.split(";");
                 if (partes.length != 5) continue;
 
-                String tipo = partes[0];
-                String id = partes[1];
-                String nome = partes[2];
-                LocalDate data = LocalDate.parse(partes[3]);
-                double quantidade = Double.parseDouble(partes[4]);
+                String tipo = partes[0].trim();
+                String id = partes[1].trim();
+                String nome = partes[2].trim();
+                String dataStr = partes[3].trim();
+                String qtdStr = partes[4].trim().replace(",", ".");
 
-                Habito h = criarHabitoPorTipo(tipo, id, nome, data, quantidade);
-                resultado.add(h);
+                try {
+                    LocalDate data = LocalDate.parse(dataStr); // yyyy-MM-dd
+                    double quantidade = Double.parseDouble(qtdStr);
+
+                    Habito h = criarHabitoPorTipo(tipo, id, nome, data, quantidade);
+                    resultado.add(h);
+                } catch (Exception linhaRuim) {}
             }
-        } catch (NumberFormatException | HabitoInvalidoException e) {
-            throw new IOException("Falha ao carregar CSV: " + e.getMessage(), e);
-        } finally {
+        } catch (IOException e) {
+            throw e; // repropaga I/O
         }
+
         return resultado;
     }
 
@@ -62,3 +82,4 @@ public class ArmazenamentoCsv {
         };
     }
 }
+
